--- a/src/pages/Home/Home.styles.scss
+++ b/src/pages/Home/Home.styles.scss
@@ -20,12 +20,3 @@
   width: 100%;
   justify-content: space-between;
 }
-
-.btn-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 40px;
-  padding: 0 15%;
-  box-sizing: border-box;
-}
